fix: grammar mistakes and paraphrasing for up to the prediction section`

--- a/notebooks/explorations.ipynb
+++ b/notebooks/explorations.ipynb
@@ -5,20 +5,13 @@
    "id": "5dee8923",
    "metadata": {},
    "source": [
-    "# Analyzing Titanic Dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2a78b70c",
-   "metadata": {},
-   "source": [
-    "Hi everyone. This is my serious take on challenging the Titanic Dataset: to see if I can predict the survival on once the British\n",
-    "Ocean Liner that sank in the early hours of 15 April 1912.\n",
+    "# Predicting Survival on the Titanic: An Iterative Analysis\n",
     "\n",
-    "I will try to focus on improving the dataset in several iterations,\n",
-    "because I want to see from as many as possible angles how to reach the closest-to-perfection solution. \n",
-    "But there's one thing that I will not try as my approach: deep learning, as I have physical restrictions on my currently-owned hardware."
+    "This notebook presents a detailed analysis of the classic Titanic dataset. The primary objective is to build a predictive model that can determine the likelihood of survival for a passenger on the RMS Titanic, the British ocean liner that sank on April 15, 1912.\n",
+    "\n",
+    "My approach is centered on iterative refinement. Through multiple cycles of feature engineering and model evaluation, I will explore various strategies to enhance the dataset and improve predictive accuracy. This process is designed to demonstrate how different analytical choices can lead to a more robust and insightful solution.\n",
+    "\n",
+    "For this project, the focus will be exclusively on classical machine learning algorithms. Due to hardware limitations, deep learning models will not be explored, allowing us to concentrate on the effectiveness and interpretability of traditional methods."
    ]
   },
   {
@@ -739,9 +732,9 @@
    "id": "87ce0d47",
    "metadata": {},
    "source": [
-    "## Wrangling + Exploring the Abyss\n",
+    "## Data Wrangling and Exploratory Data Analysis\n",
     "\n",
-    "Let's see what the data looks like through skimming process:"
+    "Let's begin with an initial inspection of the training data."
    ]
   },
   {
@@ -970,15 +963,13 @@
    "id": "ab3e38a7",
    "metadata": {},
    "source": [
-    "Based on the skimming result, there are no noticable error that I've seen on data: no negative values on any numeric-based features,\n",
-    "no null on any object-type features, etc. But, there are two things I want to take note of:\n",
+    "Based on this first look, the dataset appears to be in good shape. There are no obvious errors like negative values in numerical columns or placeholder text in object-type features. However, a few key points require attention:\n",
     "\n",
-    "- The name also contains title and salutations (ex: Mr., Mrs., Rev., etc.)\n",
-    "- High amount of null values coming from `Age` and `Cabin` features\n",
-    "- A little percentage of data is missing from the `Embarked` feature.\n",
+    "*   The `Name` column contains titles and salutations (e.g., Mr., Mrs., Capt.), which could be a valuable source of information.\n",
+    "*   The `Age` and `Cabin` columns have a significant number of null values that will need to be addressed.\n",
+    "*   A very small percentage of data is missing from the `Embarked` column.\n",
     "\n",
-    "Oh, I also want to not use `df_train` directly, so I will copy it to other variable\n",
-    "to keep it clean, since we're going to mess it up."
+    "To ensure the integrity of the original data throughout the cleaning process, I will work with a copy of the training dataframe."
    ]
   },
   {
@@ -998,13 +989,9 @@
    "source": [
     "### Call Me By Your `Name`\n",
     "\n",
-    "This part of work is inspired from the latest works I've seen on this challenge: [Megan L. Risdal](https://www.kaggle.com/code/mrisdal/exploring-survival-on-the-titanic/report) and \n",
-    "[Aldemuro M. A. Haris](https://www.kaggle.com/code/aldemuro/comparing-ml-algorithms-train-accuracy-90/notebook).\n",
+    "This section is inspired by the excellent work of [Megan L. Risdal](https://www.kaggle.com/code/mrisdal/exploring-survival-on-the-titanic/report) and [Aldemuro M. A. Haris](https://www.kaggle.com/code/aldemuro/comparing-ml-algorithms-train-accuracy-90/notebook). Their analyses highlighted that a passenger's title can be a strong proxy for social status, which may correlate with survival. This same logic might apply to the `Cabin` feature, which we will explore later.\n",
     "\n",
-    "After reading the works, I realized that title and salutations might worth even more than name itself; since salutations can closely \n",
-    "describe one person's status. This explanation also works on the `Cabin` features, but I will explain this more on later.\n",
-    "\n",
-    "Let's see if we can extract the titles from the name:"
+    "First, let's extract these titles from the `Name` column."
    ]
   },
   {
@@ -1412,7 +1399,7 @@
    "id": "e400442d",
    "metadata": {},
    "source": [
-    "We have a total of 17 different titles! Let's see the distributions."
+    "The extraction yields 17 unique titles. Let's examine their distribution."
    ]
   },
   {
@@ -1444,11 +1431,9 @@
    "id": "d56c8344",
    "metadata": {},
    "source": [
-    "We have a significant drop from the title `Master` and `Dr`, so I decide to use this as a defining line; the title that has count less \n",
-    "than `Master` can be grouped into one. The previous works were grouped it into `Rare` group, so that's what I'm going to do as well.\n",
+    "The distribution shows a steep drop-off in frequency after the first few common titles. I'll use the count of `Master` as a threshold; any title less frequent will be consolidated into a single 'Rare' category. This approach simplifies the feature while retaining the information from the most common titles.\n",
     "\n",
-    "But before doing that, I notice that `Ms`, `Mme`, and `Mlle` are quite similar; `Ms` is the short form of `Miss`, `Mme` is the short form of Madame, a French title similar to `Mrs`, and `Mlle` is the short form of Mademoiselle, a French title equivalent to `Miss` in English. Based on our findings, \n",
-    "we will incorporate this changes into the previous function and generate a new `Title` distribution."
+    "Before grouping, I will consolidate some similar titles. `Ms` is a variant of `Miss`, while `Mme` (Madame) and `Mlle` (Mademoiselle) are French equivalents of `Mrs` and `Miss`, respectively. These will be mapped to their common English counterparts to standardize the feature."
    ]
   },
   {
@@ -1854,7 +1839,7 @@
    "id": "2ef0dca1",
    "metadata": {},
    "source": [
-    "Now our new feature is packed, no more insignificant titles roaming around."
+    "This process has cleaned and simplified the `Title` feature, making it more suitable for modeling."
    ]
   },
   {
@@ -1864,19 +1849,11 @@
    "source": [
     "### What's my `Age` again?\n",
     "\n",
-    "In the earlier days, there is an unofficial code of conduct known as the **Birkenhead drill**\n",
-    "where the lives of women and children were to be saved first in a life-threatening situation.\n",
-    "It was also known as \"women and children first\" rule. This is the base of my hypothesis: `Age` feature\n",
-    "is an important one to define survivability.\n",
-    "After a whooping 20% of null values in the `Age` feature, I decided to do a data imputation to\n",
-    "fill the missing values. Thanks again to the **Aldemuro**'s work, I will generate the new ages\n",
-    "based on the person's `Title`.\n",
+    "A well-known historical maritime protocol was the \"women and children first\" rule, also known as the Birkenhead Drill. This forms the basis of my hypothesis that `Age` is a critical feature for predicting survival.\n",
     "\n",
-    "One of the simple **Data Imputation** consists of defining whether to use mean or median\n",
-    "based on its surroundings. Since our `Age` feature is a numerical one, it fits really nicely.\n",
-    "What's left is to decide to use between mean and median. But if we use it against all\n",
-    "`Age` data, it seems a little bit too broad, so I will use it with the help of\n",
-    "`Title` after grouping it."
+    "With nearly 20% of `Age` values missing, imputation is necessary. A simple approach would be to use the mean or median of the entire dataset, but this would be too general. A more nuanced strategy, also seen in Aldemuro's work, is to impute `Age` based on the median value for each passenger's `Title` group.\n",
+    "\n",
+    "To decide between the mean and median, we can visualize the age distribution for each title."
    ]
   },
   {
@@ -1909,8 +1886,7 @@
    "id": "4a75e512",
    "metadata": {},
    "source": [
-    "Based on the graphs, nearly every title group has a skewed age distribution, that is why I decided to use *median* to perform\n",
-    "the imputation."
+    "The boxplots reveal that the age distributions within most title groups are skewed. Therefore, the *median* is a more robust measure of central tendency than the mean and is the better choice for imputation."
    ]
   },
   {
@@ -2186,7 +2162,7 @@
    "id": "d548367b",
    "metadata": {},
    "source": [
-    "Now that all the Age values are filled according to their Title group, let's move on to the next one."
+    "With the missing `Age` values now intelligently filled, we can move to the next feature."
    ]
   },
   {
@@ -2196,13 +2172,11 @@
    "source": [
     "### Little `Cabin` on the Prairie\n",
     "\n",
-    "Titanic is the largest ocean liner in her era. Titanic has a total of seven layers of decks, and all of them are divided into\n",
-    "three groups of class: first-class occupied the A, B, and C, which is the first three top layers, while second and third-class occupied the rest.\n",
-    "Since the first-class is placed strategically, they might have had easier access to lifeboats and to save themselves from water that's coming from\n",
-    "the bottom area of the ship after getting scraped from the iceberg.\n",
+    "The Titanic was divided into seven decks, with First Class occupying the upper decks (A, B, and C) and other classes on the lower decks. Passengers on upper decks likely had faster and easier access to lifeboats, especially as the ship sank bow-first.\n",
     "\n",
-    "Since the `Cabin` data is almost 70% unnoticed, there is a possibility that the most powerful piece of information\n",
-    "might not come from which cabin number a survived passenger, but whether the passengers have cabins or not."
+    "The `Cabin` feature is missing nearly 70% of its values. Rather than discarding it, we can hypothesize that the most important information is not the specific cabin number, but whether a passenger had a recorded cabin at all. The presence of a cabin number likely correlates strongly with being a First Class passenger.\n",
+    "\n",
+    "Let's create a new binary feature, `HasCabin`, to capture this information."
    ]
   },
   {
@@ -2481,7 +2455,7 @@
    "id": "7015b6ed",
    "metadata": {},
    "source": [
-    "Let's see the correlation of our newly created feature compared to `Survived`:"
+    "Now, let's examine the relationship between this new feature and survival."
    ]
   },
   {
@@ -2522,8 +2496,7 @@
    "id": "bde7a27f",
    "metadata": {},
    "source": [
-    "Look at that: over 66% people who has cabins survived. It shows that this new feature is\n",
-    "impossible to ignore, and hopefully can contribute to better prediction."
+    "The result is striking: over 66% of passengers with a recorded cabin survived, compared to just 30% of those without. This confirms that `HasCabin` is a potentially powerful predictive feature."
    ]
   },
   {
@@ -2533,7 +2506,7 @@
    "source": [
     "### Much Ado About Nothing\n",
     "\n",
-    "Let's see how our data turn up:"
+    "Let's review the state of our dataset after these transformations."
    ]
   },
   {
@@ -2788,8 +2761,7 @@
    "id": "9afc5c31",
    "metadata": {},
    "source": [
-    "Ignore the `Cabin` feature since it will be deleted later; and we are almost there! What's\n",
-    "left is the `Embarked` feature with 0.2% missing values. I want to see how it spread."
+    "The dataset is almost clean. The only remaining missing values are two entries (0.2%) in the `Embarked` column. Let's examine the distribution of this feature."
    ]
   },
   {
@@ -2935,9 +2907,7 @@
    "id": "0918fe56",
    "metadata": {},
    "source": [
-    "`S` is dominating the `Embarked`. So it's a high chance when someone been asked around,\n",
-    "'where were you embarked from?' and got answered, 'Southampton'. So I will fill the\n",
-    "last two missing values with `S`."
+    "The overwhelming majority of passengers embarked at Southampton (`S`). Given this distribution, it is reasonable to fill the two missing values with the mode, `S`."
    ]
   },
   {
@@ -3207,7 +3177,7 @@
    "id": "24bdd68d",
    "metadata": {},
    "source": [
-    "Okay now it's all clean, let's continue to the next part: Prediction."
+    "With the data now fully cleaned and new features engineered, we are ready to proceed to the modeling phase."
    ]
   },
   {
