fix: grammar mistakes and paraphrasing

--- a/notebooks/explorations.ipynb
+++ b/notebooks/explorations.ipynb
@@ -3185,24 +3185,19 @@
    "id": "15718c11",
    "metadata": {},
    "source": [
-    "## Prediction\n",
+    "## Modeling and Prediction\n",
     "\n",
-    "To be honest, I'm quite dumbfounded when it comes to picking what algorithms to use. Luckily \n",
-    "[scikit-learn](https://scikit-learn.org/stable/machine_learning_map.html) offers a very helpful flowchart\n",
-    "to choose which estimator for any specific case. After following the path, I decided that\n",
-    "my initial estimator would be **LinearSVC**.\n",
+    "With a clean and engineered dataset, we can now proceed to the modeling phase.\n",
     "\n",
-    "LinearSVC is the machine learning classification algorithm that utilize Support Vector to classify data\n",
-    "by creating either straight line (in 2D), flat plane (in 3D), or hyperplane (in more than 3 dimensions) that\n",
-    "as far away from both the closest one class and the closest other class as possible. LinearSVC loves numbers,\n",
-    "so in order to use it, there are several things to do:\n",
+    "Selecting the right algorithm is a key step. The [scikit-learn algorithm flowchart](https://scikit-learn.org/stable/machine_learning_map.html) provides an excellent, practical guide for this process. Following its recommendations for a classification task with our dataset's characteristics, I have selected **Linear Support Vector Classifier (LinearSVC)** as the initial estimator.\n",
     "\n",
-    "- Fill all missing data\n",
-    "- Convert categorical features into number\n",
-    "- Feature scaling for numeric data\n",
+    "LinearSVC is a classification algorithm that works by finding an optimal hyperplane that best separates the different classes in the feature space. This hyperplane is positioned to be as far as possible from the nearest data points of any class (the \"support vectors\"). To work effectively, LinearSVC requires the input data to meet a few conditions:\n",
     "\n",
-    "Since we already fix all missing data, we can go to the next step directly.\n",
-    "\n"
+    "*   All missing values must be handled.\n",
+    "*   All categorical features must be converted to a numerical format.\n",
+    "*   Numerical features should be scaled to a common range.\n",
+    "\n",
+    "Our work in the previous section has already addressed the missing data, so we can proceed with the next two steps."
    ]
   },
   {
@@ -3210,10 +3205,9 @@
    "id": "f00f5fd6",
    "metadata": {},
    "source": [
-    "### Convert categorical features into number\n",
+    "### Encoding Categorical Features\n",
     "\n",
-    "Before doing all that, let's put our focus first on which features are categorical\n",
-    "and numerical."
+    "First, let's identify the categorical and numerical features in our processed dataset."
    ]
   },
   {
@@ -3230,31 +3224,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0017202",
-   "metadata": {},
-   "source": [
-    "And the rest of unmentioned features can be thrown away:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "eb88500d",
    "metadata": {},
    "source": [
-    "So what do I mean by converting them into numbers? It means that I am going to apply\n",
-    "one of the techniques so common in feature engineering: One-Hot Encoding (OHE).\n",
-    "OHE is a technique where for one categorical feature, we create a clone of it based\n",
-    "on how many categories are in that feature. For example, `Embarked` has three categories,\n",
-    "`S`, `C`, and `Q`. Instead of regular labeling that will turn those three into\n",
-    "1, 2, and 3, OHE will create `Embarked_S`, `Embarked_Q`, and `Embarked_C` and fill\n",
-    "it with 1 or 0 according to the respective values.\n",
+    "To convert the categorical features into a numerical format suitable for a linear model, I will use **One-Hot Encoding (OHE)**. This technique creates new binary (0 or 1) columns for each category within a feature. For example, the `Embarked` feature, with its categories `S`, `C`, and `Q`, will be transformed into three new columns: `Embarked_S`, `Embarked_C`, and `Embarked_Q`.\n",
     "\n",
-    "But what's wrong with regular labeling that I mentioned before? It's probably okay\n",
-    "when used against other ML methods, but a linear model like LinearSVC would interpret\n",
-    "this as hierarchical relationship, if `S=0`, `C=1`, and `Q=2`, then there will\n",
-    "be assumption that `S < Q` where it's not, even meaningless.\n",
+    "This method is preferable to simple label encoding (e.g., S=1, C=2, Q=2) for linear models. Label encoding can introduce a false and meaningless ordinal relationship (e.g., `S` < `C` < `Q`), which the model might misinterpret. OHE avoids this by representing each category independently.\n",
     "\n",
-    "Let's jump into the implementation:"
+    "Let's implement this using `sklearn.preprocessing`."
    ]
   },
   {
@@ -3716,8 +3693,7 @@
    "id": "b5545134",
    "metadata": {},
    "source": [
-    "Thanks to `sklearn.preprocessing`, the OHE process runs very smoothly and amazingly\n",
-    "fast. We'll left it like this for now. Let's turn our focus first to the numerical data."
+    "The OHE process has been applied successfully. Next, we will turn our attention to the numerical features."
    ]
   },
   {
@@ -3725,58 +3701,23 @@
    "id": "c4260417",
    "metadata": {},
    "source": [
-    "### Feature Scaling for Numerical Data\n",
+    "### Scaling Numerical Features\n",
     "\n",
-    "Feature scaling is important in SVM-based algorithms because SVM is a distanced-based algorithm.\n",
-    "Its entire objective is to maximize the margin (the \"street\") between the support \n",
-    "vectors of different classes. This margin is calculated using the Euclidean distance \n",
-    "between data points in a multi-dimensional space.\n",
+    "Feature scaling is critical for distance-based algorithms like SVMs. The algorithm's objective is to maximize the margin between classes, a calculation that relies on the Euclidean distance between data points. If features are on vastly different scales, the feature with the larger scale can unfairly dominate this calculation.\n",
     "\n",
-    "Let's look at the Titanic data for a concrete example. We have two features:\n",
+    "Consider `Age` (ranging from ~0 to 80) and `Fare` (ranging from ~0 to over 500). Let's take two passengers:\n",
     "\n",
-    "- Age: Ranges from ~0 to 80.\n",
-    "- Fare: Ranges from ~0 to over 500.\n",
+    "*   **Passenger X:** Age = 20, Fare = 10\n",
+    "*   **Passenger Y:** Age = 40, Fare = 310\n",
     "\n",
-    "Let's say we have two passengers, Passenger X and Passenger Y.\n",
+    "The squared Euclidean distance is `(20 - 40)² + (10 - 310)² = 400 + 90,000 = 90,400`. The contribution from the `Fare` difference (90,000) completely overshadows the contribution from the `Age` difference (400).\n",
     "\n",
-    "```\n",
-    "Passenger X: Age = 20, Fare = 10\n",
-    "Passenger Y: Age = 40, Fare = 310\n",
-    "```\n",
+    "By applying a scaler like **StandardScaler**, we transform each feature to have a mean of 0 and a standard deviation of 1. With hypothetical scaled values, the calculation might look like this:\n",
     "\n",
-    "The squared Euclidean distance between them is calculated as:\n",
+    "*   **Passenger X:** Age = -0.8, Fare = -0.4\n",
+    "*   **Passenger Y:** Age = 0.7, Fare = 2.5\n",
     "\n",
-    "```\n",
-    "Distance² = (X_age - Y_age)² + (X_fare - Y_fare)²\n",
-    "Distance² = (20 - 40)² + (10 - 310)²\n",
-    "Distance² = (-20)² + (-300)²\n",
-    "Distance² = 400 + 90,000\n",
-    "Distance² = 90,400\n",
-    "```\n",
-    "\n",
-    "Notice what just happened. The contribution from the Fare difference (90,000) \n",
-    "completely dominates the contribution from the Age difference (400). The Age \n",
-    "component of the distance is only 0.44% of the total. When you use a scaler like \n",
-    "StandardScaler from Scikit-learn, it transforms each feature so that it has a \n",
-    "mean of 0 and a standard deviation of 1.\n",
-    "\n",
-    "- An Age of 40 might become 0.7.\n",
-    "- A Fare of 310 might become 2.5.\n",
-    "- An Age of 20 might become -0.8.\n",
-    "- A Fare of 10 might become -0.4.\n",
-    "\n",
-    "Now let's redo the distance calculation with these hypothetical scaled values:\n",
-    "\n",
-    "```\n",
-    "Distance² = ( (-0.8) - 0.7 )² + ( (-0.4) - 2.5 )²\n",
-    "Distance² = (-1.5)² + (-2.9)²\n",
-    "Distance² = 2.25 + 8.41\n",
-    "Distance² = 10.66\n",
-    "```\n",
-    "\n",
-    "Look at the contributions now! The Age component (2.25) and the Fare component (8.41) \n",
-    "are on a comparable scale. Now, the algorithm can learn the true relationship and \n",
-    "give appropriate weight to both features when finding the optimal separating line."
+    "The new distance is `(-0.8 - 0.7)² + (-0.4 - 2.5)² = 2.25 + 8.41 = 10.66`. Now, both features contribute to the distance calculation on a comparable scale, allowing the algorithm to learn their true relationships."
    ]
   },
   {
@@ -4308,8 +4249,7 @@
    "id": "1c9eece0",
    "metadata": {},
    "source": [
-    "Look at that: the std of each numerical features are now the same. Now let's try combining\n",
-    "this one with our previous result of OHE:"
+    "As shown, the standard deviation of each numerical feature is now 1. We can now combine these scaled numerical features with our one-hot encoded categorical features to create the final dataset for training."
    ]
   },
   {
@@ -4497,17 +4437,17 @@
    "id": "ccc3e03e",
    "metadata": {},
    "source": [
-    "And now it's complete. We have a total of 15 features to train using LinearSVC.\n",
+    "Our final feature set is complete, containing a total of 15 features ready for the LinearSVC model.\n",
     "\n",
-    "Before we apply it to the real training data, let's summarize what we done up to this\n",
-    "point:\n",
+    "Let's quickly summarize the full preprocessing pipeline:\n",
     "\n",
-    "- Extracted title values from name\n",
-    "- Imputed missing values on `Age` and `Embarked`\n",
-    "- Created a new flag whether a passenger has cabin or not\n",
-    "- Applied OHE on categorical features\n",
-    "- Applied standard scaling on numerical features\n",
-    "- Combined all features into one DataFrame"
+    "-   Extracted `Title` from the `Name` feature.\n",
+    "-   Imputed missing values in `Age` using title-based medians.\n",
+    "-   Imputed missing values in `Embarked` using the mode.\n",
+    "-   Created a binary `HasCabin` feature from the `Cabin` column.\n",
+    "-   Applied One-Hot Encoding to all categorical features.\n",
+    "-   Applied Standard Scaling to all numerical features.\n",
+    "-   Combined these processed features into a final DataFrame."
    ]
   },
   {
@@ -4515,10 +4455,9 @@
    "id": "f0c3baea",
    "metadata": {},
    "source": [
-    "### Training\n",
+    "### Training and Initial Results\n",
     "\n",
-    "We start the training by creating a LinearSVC model with default parameters except\n",
-    "`random_state` and `max_iter`."
+    "We can now initialize and train the LinearSVC model. `random_state` is set for reproducibility and `max_iter` is increased to ensure convergence."
    ]
   },
   {
@@ -4536,8 +4475,7 @@
    "id": "9ac317ee",
    "metadata": {},
    "source": [
-    "Then we arrange the preprocessing steps on previous points before running\n",
-    "the training program:"
+    "The full preprocessing pipeline is applied before fitting the model."
    ]
   },
   {
@@ -5605,9 +5543,7 @@
    "id": "ee695b30",
    "metadata": {},
    "source": [
-    "After taking the result to .csv file, I upload it to Kaggle to determine my score.\n",
-    "And to my surprise, I got **`0.77033`** for my first attempt. Not bad for a first\n",
-    "attempter without using MLP or even Deep Learning."
+    "After submitting the predictions from the test set to Kaggle, this initial model achieved a score of **0.77033**. This is a very encouraging result for a first submission without any hyperparameter tuning or more complex ensemble methods."
    ]
   },
   {
@@ -5615,23 +5551,15 @@
    "id": "baac3270",
    "metadata": {},
    "source": [
-    "## What's Next\n",
+    "## Conclusion and Future Work\n",
     "\n",
-    "I want to test several things to understand more why my model gave me this score.\n",
+    "This notebook successfully established a complete data preprocessing and modeling pipeline, yielding a solid baseline score. The journey, however, is just beginning. To improve upon this result and gain deeper insights, the following steps are planned for the next iteration:\n",
     "\n",
-    "- Use confusion matrix instead of depending on only Accuracy\n",
-    "- Looking at the coefficients provided for each feature\n",
-    "- Manual error analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bd6c2409",
-   "metadata": {},
-   "source": [
-    "It's been fun, but I know the journey is just started. There are so many uncharted\n",
-    "areas and I can't wait to explore most of them. See you on the next .ipynb where\n",
-    "I will continue from the things I list above. Thank you."
+    "-   **Deeper Performance Analysis:** Move beyond accuracy by evaluating the model with a confusion matrix, precision, recall, and F1-score.\n",
+    "-   **Feature Importance:** Inspect the model's coefficients to understand which features were most influential in its predictions.\n",
+    "-   **Manual Error Analysis:** Investigate specific instances where the model made incorrect predictions to identify patterns and potential areas for feature engineering.\n",
+    "\n",
+    "Thank you for following along. I look forward to exploring these areas and further refining this model in the next notebook."
    ]
   }
  ],
