feat: use joblib to store models to disk

--- a/notebooks/explorations.ipynb
+++ b/notebooks/explorations.ipynb
@@ -5524,18 +5524,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "06aaedcc",
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
+    "from joblib import dump\n",
     "\n",
     "y_pred = model.predict(df_test_processed)\n",
     "pass_id = df_test['PassengerId']\n",
     "current_unix_timestamp = time.time()\n",
     "df_result = pd.DataFrame({'PassengerId': pass_id, 'Survived': y_pred})\n",
-    "df_result.to_csv(f'input/submission_{current_unix_timestamp}.csv', index=False)"
+    "df_result.to_csv(f'input/submission_{current_unix_timestamp}.csv', index=False)\n",
+    "\n",
+    "# use joblib to store model\n",
+    "_ = dump(model, f'models/model_{current_unix_timestamp}.joblib')"
    ]
   },
   {
