feat: add backbones for api and web

--- a/notebooks/full_dataset.ipynb
+++ b/notebooks/full_dataset.ipynb
@@ -11994,7 +11994,11 @@
    "cell_type": "code",
    "execution_count": 180,
    "id": "0c3f31b2",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -12586,6 +12590,12 @@
     "df_fn = df_temp[(df_temp['y_pred'] == \"0\") & (df_temp['survived'] == \"1\")]\n",
     "df_fn"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e882b855",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
